--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "bot-whatsapp",
   "version": "1.0.0",
+  "description": "Bot de WhatsApp usando whatsapp-web.js",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
+    "puppeteer": "^24.15.0",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.31.0"
